--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-particles-js": "^2.6.0",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "react-tilt": "^0.1.4",
+    "redux": "^4.0.1",
     "tachyons": "^4.11.1"
   },
   "scripts": {
